--- a/style.css
+++ b/style.css
@@ -23,10 +23,10 @@ body {
 }
 
 #today {
-    background-color: white;
+    background-color: rgb(240, 241, 239);
     padding: 20px;
     border-radius: 15px;
-    box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+    box-shadow: 1 2px 4px rgba(0,0,0,0.1);
 }
 
 #today h2 {
@@ -36,7 +36,7 @@ body {
 
 #today h6 {
     margin: 5px 0 15px 0;
-    color: gray;
+    color: rgb(14, 1, 1);
     font-weight: 400;
 }
 
